--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <a-scene embedded arjs>
     <a-marker preset="hiro">
       <a-entity rotation="-90 0 0" scale="0.05 0.05 0.05"
-        gltf-model="https://cdn.aframe.io/test-models/models/glTF-2.0/virtualcity/VC.gltf">
+        gltf-model="https://github.com/seregad544/ar/blob/main/model.gltf">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
