--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-entity rotation="-90 0 0" scale="0.05 0.05 0.05"
-        gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf">
+      <a-entity rotation="-90 0 0" scale="0.05 0.05 0.05" gltf-model="./VC.gltf">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
